---
source: crates/oxvg_optimiser/src/jobs/remove_xlink.rs
expression: "test_config(r#\"{ \"removeXlink\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" viewBox=\"0 0 50 50\">\n  <!-- convert xlink:href, xlink:show, and xlink:title -->\n  <a xlink:href=\"https://duckduckgo.com\" xlink:show=\"new\" xlink:title=\"DuckDuckGo Homepage\">\n    <text x=\"0\" y=\"10\">uwu</text>\n  </a>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
    <!-- convert xlink:href, xlink:show, and xlink:title -->
    <a target="_blank" href="https://duckduckgo.com"><title>DuckDuckGo Homepage</title><text x="0" y="10">uwu</text></a>
</svg>
